--- a/css/forgot-password.css
+++ b/css/forgot-password.css
@@ -38,7 +38,7 @@
   text-align: left;
   top: 253px;
   width: 600px;
-  font-size: 26px !important;
+  font-size: 26px;
 }
 .forgot-password .flex-row-C61RwL {
   align-items: flex-start;
@@ -286,6 +286,11 @@
     line-height: 143px;
     top: 239px;
   }
+  .forgot-password .everything-you-se-our-services-4eduM0 {
+    top: 540px;
+    width: 612px;
+    font-size: 51px !important;
+  }
   .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
     font-size: 39px !important;
     margin-left: 45% !important;
@@ -330,7 +335,7 @@
   .forgot-password .everything-you-se-our-services-4eduM0 {
     top: 382px;
     width: 581px;
-    font-size: 46.5px !important;
+    font-size: 46.5px;
   }
   .forgot-password .swapslogoimage-transparent-4eduM0 {
     margin-top: -18%;
@@ -365,7 +370,7 @@
   }
   .forgot-password .everything-you-se-our-services-4eduM0 {
     top: 338px;
-    font-size: 43px !important;
+    font-size: 45px;
     width: 500px;
   }
   .forgot-password .forgot-password-4eduM0 {
@@ -440,7 +445,7 @@
   }
   .forgot-password .everything-you-se-our-services-4eduM0 {
     top: 278px;
-    font-size: 42px !important;
+    font-size: 42px;
     width: 500px;
     line-height: 37px;
   }
@@ -502,7 +507,7 @@
 }
 .forgot-password .everything-you-se-our-services-4eduM0 {
   top: 256px;
-  font-size: 31px !important;
+  font-size: 31px;
   width: 378px;
   line-height: 34px;
 }
@@ -559,7 +564,7 @@
   }
   .forgot-password .everything-you-se-our-services-4eduM0 {
     top: 169px;
-    font-size: 19px !important;
+    font-size: 19px;
     width: 205px;
     line-height: 20px;
   }
@@ -647,7 +652,7 @@
   }
   .forgot-password .everything-you-se-our-services-4eduM0 {
     top: 169px;
-    font-size: 16.9px !important;
+    font-size: 16.5px;
     width: 153px;
     line-height: 14px;
   }
